--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     implementation libs.room.common
     implementation libs.room.runtime
     implementation libs.espresso.idling.resource
+    implementation libs.espresso.intents
+    implementation libs.espresso.contrib
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
