Add Google Maps integration and update database schema for location data

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,32 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Kms"
         tools:targetApi="31">
+
+        <!--
+             TODO: Before you run your application, you need a Google Maps API key.
+
+             To get one, follow the directions here:
+
+                https://developers.google.com/maps/documentation/android-sdk/get-api-key
+
+             Once you have your API key (it starts with "AIza"), define a new property in your
+             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
+             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAxSIbCDcAaZPOKJ3r_R7dMF_IaendAO1o" />
+
+        <activity
+            android:name=".Activities.MapsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_maps" />
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
-            android:grantUriPermissions="true"
-            android:exported="false">
+            android:exported="false"
+            android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
@@ -31,17 +52,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activities.QuizActivity"
-            android:exported="true"
-            />
-        <activity android:name=".Activities.GalleryActivity"
-            android:exported="true"
-            />
-        <activity android:name=".Activities.NewImageActivity"
+        <activity
+            android:name=".Activities.QuizActivity"
+            android:exported="true" />
+        <activity
+            android:name=".Activities.GalleryActivity"
+            android:exported="true" />
+        <activity
+            android:name=".Activities.NewImageActivity"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
